--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,5 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-permission android:name="android.permission.CAMERA" />
+        <uses-feature android:name="android.hardware.camera" />
     </application>
 </manifest> 
