Camera now works

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,15 +3,16 @@
       package="fi.ponr.motionmagnifier"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <application android:label="@string/app_name" >
         <activity android:name="ViewerActivity"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <uses-permission android:name="android.permission.CAMERA" />
-        <uses-feature android:name="android.hardware.camera" />
     </application>
 </manifest> 
